small gap fix

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -195,7 +195,7 @@ gap: 10rem;
         grid-auto-rows: minmax(150px, auto);
         justify-content: center;
         margin-top: 2rem;
-        gap: 10rem;
+        gap: 0rem;
     }
     .project-display{
         margin-left: -6.3rem;
